offer overflow issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -65,3 +65,9 @@ button {
   @apply transition-transform transform duration-150 ease-in-out hover:scale-105 active:scale-95 touch-manipulation cursor-pointer;
 }
 
+
+@media (max-width: 370px) {
+  .text-below-370 {
+    font-size: 10px !important;
+  }
+}
